--- a/.github/workflows/poetry_ci.yml
+++ b/.github/workflows/poetry_ci.yml
@@ -21,7 +21,28 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build and Test
+      - name: Build
         run: |
           poetry install
           poetry build
+  
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install Poetry
+        run: curl -sSL https://install.python-poetry.org | python3 -
+
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Publish to PyPI
+        run: |
+          poetry config pypi-token.pypi ${{ secrets.PYPI_PASSWORD }}
+          poetry publish --username ${{ secrets.PYPI_USERNAME }} --no-interaction
